--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,32 @@
+backports.shutil-get-terminal-size==1.0.0
+blinker==1.4
+click==6.7
+decorator==4.2.1
+enum34==1.1.6
+Faker==0.8.10
 Flask==0.12
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.2
+ipaddress==1.0.19
+ipython==5.5.0
+ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+pathlib2==2.3.0
+pexpect==4.3.1
+pickleshare==0.7.4
+pkg-resources==0.0.0
+prompt-toolkit==1.0.15
 psycopg2==2.7.1
+ptyprocess==0.5.2
+Pygments==2.2.0
+python-dateutil==2.6.1
+scandir==1.6
+simplegeneric==0.8.1
+six==1.11.0
 SQLAlchemy==1.1.7
+text-unidecode==1.1
+traitlets==4.3.2
+wcwidth==0.1.7
+Werkzeug==0.14.1
